--- a/package.json
+++ b/package.json
@@ -8,10 +8,26 @@
     "node": ">=6.13.0"
   },
   "scripts": {
+    "start": "nodemon ./server/",
+    "build:dev": "webpack -d --watch"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "express": "^4.17.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
-  }
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "nodemon": "^2.0.4",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
+  },
+  "presets": [
+    "@babel/preset-react"
+  ]
 }
