--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:dev": "webpack -d --watch"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "react": "^16.13.1",
