--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.20.0",
     "express": "^4.17.1",
+    "moment": "^2.29.0",
+    "prismic-reactjs": "^1.3.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
