--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-select": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
