--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "moment": "^2.29.0",
+    "mysql": "^2.18.1",
     "prismic-reactjs": "^1.3.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
