--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/system": "^4.9.14",
     "axios": "^0.20.0",
     "express": "^4.17.1",
+    "imagify": "^0.1.0",
     "moment": "^2.29.0",
     "prismic-reactjs": "^1.3.2",
     "react": "^16.13.1",
