--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "axios": "^0.20.0",
     "clsx": "^1.1.1",
     "express": "^4.17.1",
+    "formik": "^2.1.7",
     "imagify": "^0.1.0",
-    "prop-types": "^15.7.2",
     "moment": "^2.29.0",
     "prismic-reactjs": "^1.3.2",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-material-ui-form-validator": "^2.1.1",
     "react-select": "^3.1.0",
-    "react-material-ui-form-validator": "^2.1.1"
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
