--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "express": "^4.17.1",
     "formik": "^2.1.7",
     "imagify": "^0.1.0",
+    "material-ui-dropzone": "^3.5.0",
     "moment": "^2.29.0",
     "mysql": "^2.18.1",
     "prismic-reactjs": "^1.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "request": "^2.88.2",
     "react-select": "^3.1.0",
+    "request": "^2.88.2",
     "yup": "^0.29.3"
   },
   "devDependencies": {
