--- a/package.json
+++ b/package.json
@@ -19,16 +19,18 @@
     "axios": "^0.20.0",
     "clsx": "^1.1.1",
     "express": "^4.17.1",
+    "image-size": "^0.9.1",
     "imagify": "^0.1.0",
-    "prop-types": "^15.7.2",
     "moment": "^2.29.0",
     "mysql": "^2.18.1",
     "prismic-reactjs": "^1.3.2",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "request": "^2.88.2",
+    "react-image-resizer": "^1.3.0",
+    "react-material-ui-form-validator": "^2.1.1",
     "react-select": "^3.1.0",
-    "react-material-ui-form-validator": "^2.1.1"
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
