--- a/package.json
+++ b/package.json
@@ -29,10 +29,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-select": "^3.1.0",
-    "yup": "^0.29.3"
-
+    "yup": "^0.29.3",
     "request": "^2.88.2"
-
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
