--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build:dev": "webpack -d --watch"
   },
   "dependencies": {
+    "@devexpress/dx-react-chart": "^2.7.2",
+    "@devexpress/dx-react-chart-material-ui": "^2.7.2",
+    "@devexpress/dx-react-core": "^2.7.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
