--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,4 @@ coverage
 # Compiled Dirs (http://nodejs.org/api/addons.html)
 build/
 dist/
-client/public/bundle.js
-
-client/public/bundle.js
-client/public/bundle.js
+./client/public/bundle.js
