--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "formik": "^2.1.7",
     "imagify": "^0.1.0",
     "material-ui-dropzone": "^3.5.0",
+    "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.0",
     "mysql": "^2.18.1",
     "prismic-reactjs": "^1.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.9.0",
     "react-material-ui-form-validator": "^2.1.1",
     "react-select": "^3.1.0",
     "request": "^2.88.2",
