--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/system": "^4.9.14",
     "axios": "^0.20.0",
     "clsx": "^1.1.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "formik": "^2.1.7",
     "imagify": "^0.1.0",
@@ -27,10 +28,12 @@
     "prismic-reactjs": "^1.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-select": "^3.1.0",
-    "yup": "^0.29.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid": "^8.3.1",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
