--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-select": "^3.1.0",
     "request": "^2.88.2",
     "uuid": "^8.3.1",
