--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@devexpress/dx-react-chart": "^2.7.2",
     "@devexpress/dx-react-chart-material-ui": "^2.7.2",
+    "@devexpress/dx-react-core": "^2.7.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -22,8 +23,8 @@
     "clsx": "^1.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "imagify": "^0.1.0",
     "formik": "^2.1.7",
+    "imagify": "^0.1.0",
     "material-ui-dropzone": "^3.5.0",
     "moment": "^2.29.0",
     "mysql": "^2.18.1",
@@ -32,13 +33,11 @@
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
+    "react-image-resizer": "^1.3.0",
     "react-material-ui-form-validator": "^2.1.1",
     "react-select": "^3.1.0",
     "request": "^2.88.2",
-
-    "react-image-resizer": "^1.3.0",
-
-
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
