--- a/package.json
+++ b/package.json
@@ -38,10 +38,7 @@
     "react-material-ui-form-validator": "^2.1.1",
     "react-select": "^3.1.0",
     "request": "^2.88.2",
-
-    "react-image-resizer": "^1.3.0",
-
-
+    "react-image-resizer": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
