--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "nodemon ./server/",
-    "build:dev": "webpack -d --watch"
+    "build:dev": "webpack -d --watch",
+    "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
     "@devexpress/dx-react-chart": "^2.7.2",
@@ -51,7 +52,8 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "nodemon": "^2.0.4",
     "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^5.2.0"
   },
   "presets": [
     "@babel/preset-react"
